// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chatActions newWebchatSession builds an action 1`] = `
Object {
  "type": "NEW_WEBCHAT_SESSION",
}
`;

exports[`chatActions setAgentTyping builds an action 1`] = `
Object {
  "agentTyping": true,
  "type": "AGENT_TYPING",
}
`;

exports[`chatActions setChatContainerHidden builds an action 1`] = `
Object {
  "chatContainerHidden": true,
  "type": "CHAT_CONTAINER_HIDDEN",
}
`;

exports[`chatActions setChatInitialized builds an action 1`] = `
Object {
  "initializedState": "initialized",
  "type": "CHAT_INITIALIZED_STATE",
}
`;

exports[`chatActions setChatLauncherHidden builds an action 1`] = `
Object {
  "chatLauncherHidden": true,
  "type": "CHAT_LAUNCHER_HIDDEN",
}
`;

exports[`chatActions setWelcomeFormRegistered builds an action 1`] = `
Object {
  "type": "WELCOME_FORM_REGISTERED",
}
`;

exports[`chatActions updateTranscript builds an action 1`] = `
Object {
  "transcript": Array [
    Object {
      "authorType": "Customer",
      "id": "id--0",
      "text": "text--0",
      "timestamp": 0,
      "type": "Text",
    },
  ],
  "type": "UPDATE_TRANSCRIPT",
}
`;
